# sheila

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: client.rs  command.rs  gtk.rs  log.rs  logger.rs  main.rs  parser.rs  server.rs  tutorial1.rs  videoconvert.rs
src/client/: client.rs  display.rs  mod.rs  play.rs  shutdown.rs  status.rs  stop.rs
src/consumer/: mod.rs
src/draw/: mod.rs  monitor.rs  receiver.rs  state.rs  stream.rs  wallpaper.rs  window.rs
src/player/: mod.rs  state.rs  wallpaper.rs
src/server/: handler.rs  jsonrpc.rs  mod.rs  request.rs  response.rs  server.rs
src/server/player/: mod.rs  monitor.rs  operation.rs  playlist.rs  state.rs  status.rs  stream.rs  wallpaper.rs  window.rs
src/video_player_window/: imp.rs  mod.rs  video_player_window.ui
