[package]
name = "sheila"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = { version = "4.5.31", features = ["derive", "string"] }
log = "0.4"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = {version= "1.0.140"}
env_logger = "0.11.7"
# clap = { version = "4.5.31", features = ["derive"] }
# infer = "0.15.0"
# dbus = "0.9.7"
# gtk4-layer-shell = "0.2.0"
# gio = "0.18.3"
# gtk4 = {version="0.7.3", features=["v4_10"]}
# gst-plugin-gtk4 = "0.11"
# gstreamer ="0.21"
# gstreamer-video = "0.21"
# glib = "0.18.3"

